Fix some spacing and better separate GitHub Button from account form
- The GitHub button is used in a bunch of places. Start separating out
account-specific styles and options into props.

--- a/app/web_modules/sourcegraph/dashboard/styles/Home.css
+++ b/app/web_modules/sourcegraph/dashboard/styles/Home.css
@@ -11,6 +11,8 @@
 
 .flex-fill { flex: 1 }
 
+.tc { composes: tc from typography; }
+
 .container {
 	composes: containerFixed from layout;
 	composes: col-12-ns col-11 from grid;
